force-app/main/default/objects/Fleet_Overview__c/Fleet_Overview__c.object-meta.xml
<CustomObject>
    <label>Fleet Overview</label>
    <nameField>
        <label>Fleet Overview</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>