force-app/main/default/objects/Fleet_Overview__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>