force-app/main/default/objects/Fleet_Overview__c/fields/City_name__c.field-meta.xml
<CustomField>
    <fullName>City_name__c</fullName>
    <label>City name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>