force-app/main/default/objects/Fleet_Overview__c/fields/Holding_Period__c.field-meta.xml
<CustomField>
    <fullName>Holding_Period__c</fullName>
    <label>Holding Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>