force-app/main/default/objects/Fleet_Overview__c/fields/Open_Rentals__c.field-meta.xml
<CustomField>
    <fullName>Open_Rentals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Rentals</label>
    <referenceTo>OpenRentals__c</referenceTo>
    <relationshipLabel>Fleet Overview</relationshipLabel>
    <relationshipName>Fleet_Overview</relationshipName>
    <type>Lookup</type>
</CustomField>