force-app/main/default/objects/Fleet_Overview__c/fields/Registration_Check__c.field-meta.xml
<CustomField>
    <fullName>Registration_Check__c</fullName>
    <formula>CONTAINS(Open_Rentals__r.Registration__c ,  Registration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Check</label>
    <type>Checkbox</type>
</CustomField>