force-app/main/default/objects/Fleet_Overview__c/fields/Registration_date__c.field-meta.xml
<CustomField>
    <fullName>Registration_date__c</fullName>
    <label>Registration date</label>
    <type>Date</type>
</CustomField>