force-app/main/default/objects/Fleet_Overview__c/fields/Sixt_model__c.field-meta.xml
<CustomField>
    <fullName>Sixt_model__c</fullName>
    <label>Sixt model</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>