force-app/main/default/objects/Fleet_Overview__c/fields/Veh_group__c.field-meta.xml
<CustomField>
    <fullName>Veh_group__c</fullName>
    <label>Veh. group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>