force-app/main/default/objects/Fleet_Overview__c/fields/Veh_status__c.field-meta.xml
<CustomField>
    <fullName>Veh_status__c</fullName>
    <label>Veh. status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>